syntax = "proto3";

package inputs;

import "pointers.proto";
import "common.proto";

enum InputType {
  UNKNOWN_INPUT_TYPE = 0;
  CONTRACT = 1;
  COIN = 2;
  MESSAGE = 3;
}

message Input {
  string subject = 1;
  InputType type = 2;
  
  oneof input {
    InputCoin coin = 3;
    InputContract contract = 4;
    InputMessage message = 5;
  }
  
  // Metadata
  common.Metadata metadata = 7;
  pointers.InputPointer pointer = 8;
}

message InputCoin {
  // Fields matching fuel-core
  bytes utxo_id = 1;
  bytes owner = 2;
  int64 amount = 3;
  bytes asset_id = 4;
  pointers.TxPointer tx_pointer = 5;
  int32 witness_index = 6;
  int64 predicate_gas_used = 7;
  bytes predicate = 8;
  bytes predicate_data = 9;

  // Extra fields (not in fuel-core)
  int64 predicate_length = 10;
  int64 predicate_data_length = 11;
  int32 output_index = 12;
}

message InputContract {
  // Fields matching fuel-core
  bytes utxo_id = 1;
  bytes balance_root = 2;
  bytes state_root = 3;
  pointers.TxPointer tx_pointer = 4;
  bytes contract_id = 5;

  // Extra fields (not in fuel-core)
  int32 output_index = 6;
}

message InputMessage {
  // Fields matching fuel-core
  bytes sender = 1;
  bytes recipient = 2;
  int64 amount = 3;
  bytes nonce = 4;
  int32 witness_index = 5;
  int64 predicate_gas_used = 6;
  bytes data = 7;
  bytes predicate = 8;
  bytes predicate_data = 9;

  // Extra fields (not in fuel-core)
  int32 data_length = 10;
  int32 predicate_length = 11;
  int32 predicate_data_length = 12;
}